# Portfolio-backend

./: .env  .env.example  .gitignore  .vercelignore  email_service.py  main.py  pyproject.toml  render.yaml  requirements.txt  requirements_contact.txt  vercel.json
