[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-service>=2.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.2",
    "openai-agents>=0.5.1",
    "pydantic[email]>=2.12.4",
    "pypdf>=6.3.0",
    "pypdf2>=3.0.1",
    "react-hot-toast",
]
